must enter email and password for sending emails

--- a/server/.env
+++ b/server/.env
@@ -8,5 +8,5 @@ DATABASE_USER = root
 DATABASE_PASSWORD = root
 DATABASE_PORT = 3308
 
-EMAIL_FROM_USER = pateu.sunca@gmail.com
-EMAIL_FROM_PASSWORD = nvxgttasxhhqxscw
+EMAIL_FROM_USER = 
+EMAIL_FROM_PASSWORD = 
